Commit 8: Create an API to generate the token to the user (user sign in).
